src/Components/Contact/Contact.module.css
/* Container */
.ContactSectionContainer {
  background-color: var(--secondary-background-color);
  padding: 80px 0px;
  width: 100%;
  overflow: hidden;
}
.contactContainer {
  max-width: 600px;
  margin: 0 auto;
  padding: 20px;
  border-radius: 8px;
}

/* Heading */
.heading {
  font-size: 48px;
  font-weight: 500px;
  margin-bottom: 24px;
  text-align: center;
}

/* Form */
.form {
  display: flex;
  flex-direction: column;
}

/* Form Groups */
.formGroup {
  margin-bottom: 15px;
}

/* Labels */
.formGroup label {
  display: block;
  font-weight: bold;
  margin-bottom: 5px;
  color: #555;
}

/* Input Fields */
.formGroup input,
.formGroup textarea {
  width: 100%;
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 5px;
  font-size: 14px;
  background-color: #fcfcfb;
  outline: none;
}

/* Textarea */
.formGroup textarea {
  resize: none;
}

/* Submit Button */
.submitButton {
  color: var(--main-button-text-color);
  background-color: var(--main-Button-bg-color);
  padding: 12px;
  border: none;
  border-radius: 5px;
  font-size: 16px;
  cursor: pointer;
  width: 200px;
  transition: background-color 0.3s;
}

.submitButton:hover {
  background-color: #0056b3;
}

/* =========================== */
/*        Responsive CSS       */
/* =========================== */
@media (max-width: 1024px) {
  .heading {
    text-align: left !important;
  }
  .contactContainer {
    padding: 20px 0px;
  }
}

